--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a sample server Petstore server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [
     "swagger"
