--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "js-yaml": "^3.3.0",
+    "mongodb": "^3.2.7",
     "swagger-tools": "0.10.1"
   },
   "devDependencies": {
