--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.1'
 
 services:
 
-  db:
+  mongo:
     image: mongo:4.0
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: exam
+      MONGO_INITDB_ROOT_PASSWORD: example
     ports:
       - 27017:27017
 
@@ -31,4 +31,4 @@ services:
       NODE_ENV: "dev"
       NODE_PORT: "8043"
     depends_on:
-      - db
+      - mongo
