--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "js-yaml": "^3.3.0",
     "mongodb": "^3.2.7",
