--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "connect": "^3.7.0",
     "debug": "^4.1.1",
-    "express": "^4.17.1",
     "js-yaml": "^3.3.0",
     "mongodb": "^3.2.7",
     "swagger-tools": "0.10.1"
